<resources>
    <string name="app_name">Starter2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_select_restaurant">Bước 1: Chọn loại hình nhà hàng</string>
    <string name="text_setup_menu_restaurant">Bước 2: Thiết lập thực đơn</string>
    <string name="text_finish_setup">Bước 3: Hoàn thành</string>
    <string name="text_add_food">Thêm món</string>
    <string name="text_edit_food">Sửa món</string>
    <string name="text_payment_no">Sửa món</string>
    <string name="text_chi_tiet_hoa_don">Chi tiết hoá đơn</string>
    <string name="text_bao_cao">Báo cáo</string>
    <string name="text_doanh_thu_tong_quan">Doanh thu tổng quan</string>
    <string name="text_doanh_thu_theo_mat_hang">Doanh thu theo mặt hàng</string>
    <string name="text_day_example">Thứ sáu - Ngày 12/02/2021</string>


    <!--  text  template-->
    <string name="day_example">12/02/2021</string>
    <string name="text_item_restaurant">Quán cafe</string>
    <string name="text_setup_completed">THIẾT LẬP THÀNH CÔNG</string>
    <string name="text_setup_completed_notification">Bạn vừa thiết lập ban đầu thành công, giờ đây bạn có thể bán hàng ngay.</string>
    <string name="text_sample">This answer solved a problem with a GridLayout containing buttons</string>

    <string name="text_unit_food">Đơn vị tính (*)</string>
    <string name="text_group_food">Nhóm thực đơn</string>
    <string name="text_item_food">Sinh tố xoài</string>
    <string name="text_item_food_price">65k</string>
    <string name="text_item_category">Sinh tố</string>
    <string name="text_payment_no_data">Không có dữ liệu.</string>
    <string name="text_tra_lipton">Trà lipton</string>
    <string name="text_hoa_don_up">HOÁ ĐƠN</string>
    <string name="text_so_">Số: </string>
    <string name="text_ten_mon">Tên món</string>
    <string name="text_sl">SL</string>
    <string name="text_thanh_tien">Thành tiền</string>
    <string name="text_order">Order:</string>
    <string name="text_ngay">Ngày:</string>
    <string name="text_nhieu_sua">Nhiều sữa</string>

    <string name="text_so_thich_phuc_vu">Sở thích phục vụ</string>
    <string name="text_nhap_ten_so_thich_phuc_vu">Nhập tên sở thích phục vụ...</string>
    <string name="text_khong_duong">Không đường</string>
    <string name="text_khuyen_mai">Khuyến mại</string>
    <string name="text_ghi_chu">Ghi chú...</string>
    <string name="text_them_nhom_thuc_don">Thêm nhóm thực đơn</string>

    <string name="text_add_unit">THÊM ĐƠN VỊ TÍNH</string>
    <string name="text_name_unit">Tên đơn vị</string>
    <string name="text_ds_order">Danh sách Order</string>
    <string name="text_select_food">Chọn món</string>
    <string name="text_con_phai_thu">Còn phải thu:</string>
    <string name="text_con_phai_thu_tien">62.000</string>
    <string name="text_thu_tien">Thu tiền</string>
    <string name="text_tong_tien">Tổng tiền</string>
    <string name="text_khach_dua">Khách đưa</string>
    <string name="text_tra_lai">Trả lại</string>
    <string name="text_hoa_don">Hoá đơn</string>
    <string name="text_chua_co_Tk">Bạn chưa có tài khoản?</string>
    <string name="text_chua_co_Tk_dang_ky"><u>Đăng ký</u></string>


    <!--    Text Button template-->
    <string name="text_btn_continue">TIẾP TỤC</string>
    <string name="text_btn_completed_setup">BẮT ĐẦU SỬ DỤNG</string>
    <string name="text_btn_save_food">LƯU LẠI</string>
    <string name="text_btn_add_unit">ĐỒNG Ý</string>
    <string name="text_btn_cancel_add_unit">HUỶ</string>
    <string name="text_btn_huy_bo">HUỶ BỎ</string>
    <string name="text_btn_thu_tien">THU TIỀN</string>
    <string name="text_btn_hoan_thanh">HOÀN THÀNH</string>

    <!--    Popup menu-->

    <string name="mnu_setup_group_menu">Thiết lập nhóm thực đơn</string>
    <string name="mnu_change_all_price">Đổi toàn bộ giá món</string>
    <string name="mnu_delete_all_food">Xoá toàn bộ món</string>

    <!--    Hint EditText-->
    <string name="hint_food_name">Tên món (*)</string>
    <string name="text_default_food_price">0</string>
    <string name="text_so_luong">SL:</string>
    <string name="text_tong_tien_thu_duoc">Tổng số tiền thu được</string>
    <string name="text_tien_mat">Tiền mặt</string>
    <string name="text_thanh_toan_khac">Thanh toán khác</string>
    <string name="text_doanh_thu_tb_theo_gio">DOANH THU TRUNG BÌNH THEO GIỜ</string>
    <string name="text_doanh_thu_tb_theo_ngay">DOANH THU TRUNG BÌNH THEO NGÀY</string>

    <!--    Drawable navigation-->
    <string name="ds_hoa_don">Danh sách hoá đơn</string>
    <string name="ds_thuc_don">Danh sách Thực đơn</string>
    <string name="so_thich_phuc_vu">Sở thích phục vụ</string>
    <string name="bao_cao">Báo cáo</string>
    <string name="thiet_lap">Thiết lập</string>
    <string name="dong_bo_data">Đồng bộ dữ liệu</string>
    <string name="chinh_sach_bao_mat">Chính sách bảo mật</string>
    <string name="gioi_thieu_ban_be">Giới thiệu cho bạn bè</string>
    <string name="danh_gia_ung_dung">Đánh giá ứng dụng</string>
    <string name="gui_thong_bao_loi">Gửi thông báo lỗi</string>
    <string name="thong_tin_ung_dung">Thông tin ứng dụng</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="text_doanh_thu">Doanh thu</string>
    <string name="text_nhap_so_ban">NHẬP SỐ BÀN</string>
    <string name="text_giam_gia_hoa_don">GIẢM GIÁ HOÁ ĐƠN</string>
    <string name="text_phan_tram">Phần trăm</string>
    <string name="text_so_tien">Số tiền</string>

    <string name="open_draw">Open Drawer Layout</string>
    <string name="close_draw">Close Drawer Layout</string>


    <string name="nhap_sdt">Số điện thoại</string>
    <string name="nhap_mk">Mật khẩu</string>
    <string name="quen_mk">Quên mật khẩu?</string>
    <string name="login">ĐĂNG NHẬP</string>

    <string-array name="khuyen_mai_arr">
        <item>%</item>
        <item>VND</item>
    </string-array>

    <string-array name="thu_tien_arr">
        <item>Tiền mặt</item>
        <item>Thẻ ngân hàng</item>
    </string-array>
    <integer-array name="tien_vnd_arr">
        <item>20000</item>
        <item>25000</item>
        <item>30000</item>
        <item>35000</item>
        <item>40000</item>
        <item>45000</item>
        <item>50000</item>
        <item>55000</item>
        <item>60000</item>
        <item>65000</item>
        <item>70000</item>
        <item>75000</item>
        <item>100000</item>
        <item>120000</item>
        <item>125000</item>
        <item>150000</item>
        <item>200000</item>
        <item>250000</item>
        <item>300000</item>
        <item>350000</item>
        <item>400000</item>
        <item>450000</item>
        <item>500000</item>
        <item>550000</item>
        <item>600000</item>
        <item>650000</item>
        <item>700000</item>
        <item>750000</item>
        <item>800000</item>
        <item>850000</item>
        <item>900000</item>
        <item>950000</item>
        <item>1000000</item>
        <item>1050000</item>
        <item>1100000</item>
    </integer-array>

    <string-array name="choose_day">
        <item>Hôm nay</item>
        <item>Hôm qua</item>
        <item>Tuần này</item>
        <item>Tuần trước</item>
        <item>Tháng này</item>
        <item>Khác</item>
    </string-array>
    <string name="add_category_group">Thêm nhóm thực đơn</string>
    <string name="update_category_group">Sửa nhóm thực đơn</string>
    <string name="text_bieu_tuong"><span>
		<span>Biểu tượng</span>
		<span style="color: red">(*)</span>
	</span></string>

    <!--Integer Value that number of column in RecyclerView-->
    <integer name="photo_list_preview_columns">5</integer>
    <string name="errr_input">%s không được để trống!!</string>

    <string name="txt_input_price_item">NHẬP GIÁ MÓN</string>
    <string name="txt_btn_synch">ĐỒNG BỘ NGAY</string>
    <string name="txt_synch">Bấm \"ĐỒNG BỘ NGAY\" để chuyển các dữ liệu bán hàng mới nhất lên máy chủ.</string>

    <string name="txt_in_hd">In hoá đơn</string>
    <string name="txt_huy_hd">Huỷ hoá đơn</string>

    <string name="txt_promotion_percent">Khuyến mại</string>
    <string name="txt_table_name">- Bàn %s:</string>
    <string name="txt_amount_promotion">TỔNG THANH TOÁN</string>
</resources>