<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bg_payment_detail"
    android:layout_height="match_parent"
    tools:context=".ui.paymentdetail.PaymentDetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_height="@dimen/toolbar_height_size">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/size_ic_statusbar"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"                android:src="@drawable/ic_icon_back"
                android:layout_height="@dimen/size_ic_statusbar"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                style="@style/text_large"
                android:text="@string/text_chi_tiet_hoa_don"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/ivOptionMenu"
                android:layout_width="@dimen/toolbar_height_size"
                android:src="@drawable/ic_menu_dot_20"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/margin_large"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_centerVertical="true"
                android:layout_height="@dimen/toolbar_height_size"/>
            <View
                android:layout_width="@dimen/text_quantity"
                android:id="@+id/viewShowPopup"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_height="0.1dp"/>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin_large"
            android:layout_marginBottom="@dimen/card_item_restaurant_size"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/llMain"
                android:layout_alignParentStart="true"
                android:background="@color/white"
                android:padding="@dimen/margin_large"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/text_hoa_don_up"
                    style="@style/text_large"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvPaymentNO"
                    android:layout_width="wrap_content"
                    android:text="@string/text_so_"
                    style="@style/text_normal.bold"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_marginTop="@dimen/margin_divider_dot"
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="1dp"/>
                <LinearLayout
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/text_order"
                        style="@style/text_normal.bold"
                        android:layout_marginRight="@dimen/margin_normal"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvOrderID"
                        android:layout_width="wrap_content"
                        style="@style/text_normal"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvTableName"
                        android:layout_width="wrap_content"
                        android:text="@string/txt_table_name"
                        style="@style/text_normal"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/text_ngay"
                        style="@style/text_normal.bold"
                        android:layout_marginRight="@dimen/margin_normal"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvPaymentDateCreate"
                        android:layout_width="wrap_content"
                        style="@style/text_normal"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvThanhTien"
                        android:layout_width="wrap_content"
                        android:text="@string/text_thanh_tien"
                        style="@style/text_normal.bold"
                        android:layout_alignParentEnd="true"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/text_sl"
                        style="@style/text_normal.bold"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/text_ten_mon"
                        style="@style/text_normal.bold"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
                <View
                    android:layout_marginTop="@dimen/margin_divider_dot"
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="1dp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvPaymentDetail"
                    android:overScrollMode="never"
                    android:layout_width="match_parent"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_payment_detail"
                    android:layout_height="wrap_content"/>
                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvAmount"
                        android:layout_width="wrap_content"
                        android:text="@string/text_con_phai_thu_tien"
                        style="@style/text_normal.bold"
                        android:layout_alignParentEnd="true"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvCountQuantity"
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        style="@style/text_normal.bold"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_small"
                    android:id="@+id/rlPromotion"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txtPromotion"
                        android:layout_width="wrap_content"
                        style="@style/text_normal"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/txt_promotion_percent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="@dimen/margin_small"
                        android:layout_width="wrap_content"
                        style="@style/text_normal"
                        android:textStyle="bold"
                        android:layout_below="@id/txtPromotion"
                        android:layout_alignParentStart="true"
                        android:text="@string/txt_amount_promotion"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvPromotion"
                        android:layout_width="wrap_content"
                        style="@style/text_normal"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:text="25.000"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="@dimen/margin_small"
                        android:id="@+id/tvTotalAmout"
                        android:layout_width="wrap_content"
                        style="@style/text_normal"
                        android:layout_below="@id/tvPromotion"
                        android:layout_alignParentEnd="true"
                        android:text="25.000"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_small"
                    android:background="@color/black"
                    android:layout_height="1dp"/>

                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/text_khach_dua"
                        style="@style/text_normal"
                        android:layout_alignParentStart="true"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvReceiveAmount"
                        android:layout_width="wrap_content"
                        android:text="@string/text_con_phai_thu_tien"
                        style="@style/text_normal.bold"
                        android:layout_alignParentEnd="true"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_small"
                    android:id="@+id/rlTraLai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/text_tra_lai"
                        style="@style/text_normal.bold"
                        android:layout_alignParentStart="true"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvReturnAmount"
                        android:layout_width="wrap_content"
                        style="@style/text_normal.bold"
                        android:layout_alignParentEnd="true"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_below="@id/llMain"
                android:scaleType="fitStart"
                android:src="@drawable/img_bottom_payment_detail"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>