<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_height="@dimen/toolbar_height_size">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ivArrowBackSetupMenu"
                android:layout_width="@dimen/size_ic_statusbar"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/margin_large"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_icon_back"
                android:layout_height="@dimen/size_ic_statusbar"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                style="@style/text_large"
                android:text="@string/text_finish_setup"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:id="@+id/llProgress"
        android:layout_below="@id/appBarLayout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_height="2dp">
        <View
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:background="@color/progress"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivBackgroundCompleted"
        android:layout_width="match_parent"
        android:layout_below="@id/appBarLayout"
        android:src="@drawable/ic_bg_setup_completed"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvTextSetupCompleted"
        android:layout_marginTop="@dimen/margin_large_completed"
        android:layout_below="@+id/ivBackgroundCompleted"
        android:gravity="center"
        style="@style/text_large.completed"
        android:layout_width="match_parent"
        android:text="@string/text_setup_completed"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_below="@id/tvTextSetupCompleted"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        style="@style/text_normal"
        android:gravity="center"
        android:text="@string/text_setup_completed_notification"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinishSetup"
        android:layout_alignParentBottom="true"
        android:foreground="?android:selectableItemBackground"
        android:background="@drawable/custom_btn_completed_setup"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/text_btn_completed_setup"
        android:letterSpacing="0"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="@dimen/btn_setup_menu_size_height"/>
</RelativeLayout>